--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+  <img src="banner.jpg" alt="HAQ Banner" style="width: 100%; border-radius: 10px;">
     <h1>🧰 HAQWare Toolbox</h1>
     <p>Mini Tools Powered by HAQ</p>
     <a class="tool-link" href="password.html">🔐 Password Generator</a>
