--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>HAQWare Toolbox</title>
-    <style>
+    <style>body {
+  font-size: 18px;
+  line-height: 1.6;
+}
         body { font-family: 'Segoe UI', sans-serif; background-color: #111; color: white; text-align: center; padding: 50px; }
         h1 { color: #00f2ff; }
         .tool-link { display: block; margin: 20px; padding: 15px; background: #222; border-radius: 10px; text-decoration: none; color: #00f2ff; font-weight: bold; }
         .tool-link:hover { background-color: #333; }
-    </style>
+    </style>input, textarea, select {
+  background-color: white;
+  color: black;
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
 </head>
 <body>
   <img src="banner.jpg" alt="HAQ Banner" style="width: 100%; border-radius: 10px;">
