--- a/password.html
+++ b/password.html
@@ -1,11 +1,14 @@
 
 <!DOCTYPE html>
 <html>
-<head><title>Password Generator</title></head>
+<head><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Password Generator</title></head>
 <body style="background:#111;color:white;text-align:center;">
 <h2>Generate Strong Password</h2>
 <button onclick="generate()">Generate</button>
-<p id="output" style="font-size:24px;margin-top:20px;"></p>
+<p id="output"body {
+  font-size: 18px;
+  line-height: 1.6;
+} style="font-size:24px;margin-top:20px;"></p>
 <script>
 function generate() {
   let chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@#$!";
